<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/minusOne"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_minus_one" />

            <TextView
                android:id="@+id/counter"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="40dp"
                android:paddingTop="10dp"
                android:paddingRight="40dp"
                android:paddingBottom="10dp"
                android:text="@string/textview_counter" />

            <Button
                android:id="@+id/plusOne"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_plus_one" />

        </LinearLayout>

        <Button
            android:id="@+id/reset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_reset" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>